[gd_scene load_steps=28 format=2]

[ext_resource path="res://sprites/TechGreen1.png" type="Texture2D" id=1]
[ext_resource path="res://sprites/Dragon.png" type="Texture2D" id=2]
[ext_resource path="res://fonts/NES.tres" type="FontFile" id=3]
[ext_resource path="res://src/Battle.gd" type="Script" id=4]
[ext_resource path="res://src/CM.tres" type="Resource" id=5]
[ext_resource path="res://sprites/EngineerFrontSmall.png" type="Texture2D" id=6]
[ext_resource path="res://music/BossFightMusicv2.wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/buzzcards/businessbuzzcard.png" type="Texture2D" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.294118, 0.992157, 0.00392157, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.00784314, 0.00784314, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
expand_margin_left = 1.0
expand_margin_right = 1.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="FontFile" id=7]
antialiased = false
font_path = "res://fonts/Adventurer.ttf"

[sub_resource type="FontFile" id=8]
font_data = SubResource( 7 )

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EnemyContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer/Enemy:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "enemy_died"
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyContainer:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 1 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "mini_shake"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -2 ), Vector2( 2, 2 ), Vector2( -2, 2 ), Vector2( 1, -2 ), Vector2( -3, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=13]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7, -7 ), Vector2( 8, 8 ), Vector2( -5, 6 ), Vector2( 5, -4 ), Vector2( -7, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.227451, 0.67451, 0.360784, 1 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.227451, 0.67451, 0.360784, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=21]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )

[node name="CMBattle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
enemy = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -24.0
offset_right = -511.0
offset_bottom = -280.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" type="TextureRect" parent="."]
offset_left = 6.56366
offset_top = 115.019
offset_right = 150.564
offset_bottom = 436.019
texture = ExtResource( 6 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buzzcard" type="TextureRect" parent="."]
visible = false
offset_left = 248.0
offset_top = 216.0
offset_right = 910.0
offset_bottom = 670.0
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -153.434
offset_top = -275.252
offset_right = -9.43433
offset_bottom = -159.251
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="EnemyContainer"]
offset_right = 144.0
offset_bottom = 16.0
custom_minimum_size = Vector2( 0, 16 )
theme_override_styles/fg = SubResource( 1 )
theme_override_styles/bg = SubResource( 2 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Label" type="Label" parent="EnemyContainer/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
text = "HP: 25/50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="TextureRect" parent="EnemyContainer"]
offset_top = 20.0
offset_right = 144.0
offset_bottom = 116.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="PlayerPanel" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = -392.0
offset_right = -637.0
offset_bottom = -360.0
theme_override_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerData" type="HBoxContainer" parent="PlayerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_right = -8.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayerPanel/PlayerData"]
offset_top = 9.0
offset_right = 314.0
offset_bottom = 22.0
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource( 3 )
text = "PLAYER"
align = 1

[node name="ProgressBar" type="ProgressBar" parent="PlayerPanel/PlayerData"]
offset_left = 318.0
offset_top = 8.0
offset_right = 633.0
offset_bottom = 24.0
custom_minimum_size = Vector2( 0, 16 )
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/fg = SubResource( 1 )
theme_override_styles/bg = SubResource( 2 )
max_value = 50.0
step = 1.0
value = 25.0
percent_visible = false

[node name="Label" type="Label" parent="PlayerPanel/PlayerData/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_shadow_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
text = "HP: 25/50"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Textbox" type="Panel" parent="."]
anchor_right = 1.0
offset_left = 117.292
offset_top = 9.18921
offset_right = -754.708
offset_bottom = 65.1892
theme_override_styles/panel = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Textbox"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
theme_override_fonts/font = SubResource( 8 )
text = "A DRAGON appears!"

[node name="Ticker" type="Label" parent="Textbox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -19.0
offset_right = -4.0
offset_bottom = -3.0
theme_override_fonts/font = SubResource( 8 )
text = ">"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/enemy_damaged = SubResource( 10 )
anims/enemy_died = SubResource( 11 )
anims/mini_shake = SubResource( 12 )
anims/shake = SubResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Yes" type="Button" parent="."]
visible = false
offset_left = 224.0
offset_top = 152.0
offset_right = 294.0
offset_bottom = 192.0
focus_neighbor_right = NodePath("../No")
mouse_filter = 2
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/focus = SubResource( 14 )
theme_override_styles/normal = SubResource( 15 )
text = "Yes"

[node name="No" type="Button" parent="."]
visible = false
offset_left = 328.0
offset_top = 152.0
offset_right = 398.0
offset_bottom = 192.0
focus_neighbor_left = NodePath("../Yes")
mouse_filter = 2
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/focus = SubResource( 16 )
theme_override_styles/normal = SubResource( 15 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -4.0
autoplay = true

[node name="ActionsPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -498.005
offset_top = 1.189
offset_right = -98.005
offset_bottom = 33.189
theme_override_styles/panel = SubResource( 17 )

[node name="Actions" type="HBoxContainer" parent="ActionsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -6.0
theme_override_constants/separation = 6
alignment = 1

[node name="Attack" type="Button" parent="ActionsPanel/Actions"]
offset_right = 125.0
offset_bottom = 20.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = SubResource( 18 )
theme_override_styles/pressed = SubResource( 18 )
theme_override_styles/normal = SubResource( 19 )
focus_mode = 0
text = "Attack"

[node name="Defend" type="Button" parent="ActionsPanel/Actions"]
offset_left = 131.0
offset_right = 256.0
offset_bottom = 20.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = SubResource( 18 )
theme_override_styles/pressed = SubResource( 18 )
theme_override_styles/normal = SubResource( 19 )
focus_mode = 0
text = "Defend"

[node name="Special" type="Button" parent="ActionsPanel/Actions"]
offset_left = 262.0
offset_right = 388.0
offset_bottom = 20.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = SubResource( 18 )
theme_override_styles/pressed = SubResource( 18 )
theme_override_styles/normal = SubResource( 19 )
focus_mode = 0
text = "Special"

[node name="Special1" type="Button" parent="ActionsPanel/Actions"]
visible = false
offset_left = 235.0
offset_right = 308.0
offset_bottom = 19.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = SubResource( 20 )
theme_override_styles/pressed = SubResource( 20 )
theme_override_styles/normal = SubResource( 21 )
focus_mode = 0
text = "Binary Beam"

[node name="Special2" type="Button" parent="ActionsPanel/Actions"]
visible = false
offset_left = 235.0
offset_right = 308.0
offset_bottom = 19.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = SubResource( 20 )
theme_override_styles/pressed = SubResource( 20 )
theme_override_styles/normal = SubResource( 21 )
focus_mode = 0

[node name="Special3" type="Button" parent="ActionsPanel/Actions"]
visible = false
offset_left = 235.0
offset_right = 308.0
offset_bottom = 19.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = SubResource( 20 )
theme_override_styles/pressed = SubResource( 20 )
theme_override_styles/normal = SubResource( 21 )
focus_mode = 0

[node name="Special4" type="Button" parent="ActionsPanel/Actions"]
visible = false
offset_left = 235.0
offset_right = 308.0
offset_bottom = 19.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = SubResource( 20 )
theme_override_styles/pressed = SubResource( 20 )
theme_override_styles/normal = SubResource( 21 )
focus_mode = 0

[node name="Back" type="Button" parent="ActionsPanel/Actions"]
visible = false
offset_left = 235.0
offset_right = 308.0
offset_bottom = 19.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
theme_override_colors/font_hover_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_pressed_color = Color( 0, 0, 0, 1 )
theme_override_fonts/font = ExtResource( 3 )
theme_override_styles/hover = SubResource( 20 )
theme_override_styles/pressed = SubResource( 20 )
theme_override_styles/normal = SubResource( 21 )
focus_mode = 0
text = "Back"

[connection signal="pressed" from="Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Defend" to="." method="_on_Defend_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Special" to="." method="_on_Special_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Special1" to="." method="_on_Special1_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Special2" to="." method="_on_Special2_pressed"]
[connection signal="pressed" from="ActionsPanel/Actions/Back" to="." method="_on_Special_pressed"]
